# ecg-cnn-comparator

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
configs/: config.yaml  data.yaml  training.yaml
configs/base_model/: base_model.yaml  resnet18.yaml
configs/handcrafted_model/: base_handcrafted.yaml  disabled.yaml
configs/model/: base_model.yaml  handcrafted.yaml
notebooks/: analize.ipynb  features_analysis.ipynb
src/data/: loader.py  preprocess.py
src/ecg_analyzer/: __init__.py  main.py
src/ecg_analyzer/data/: __init__.py  ecg_dataset.py  loader.py  preprocess.py
src/ecg_analyzer/models/: MTL.py  __init__.py  base_model.py  cnn_handcrafted.py  resnet18.py
src/ecg_analyzer/training/: __init__.py  evaluator.py  trainer.py
src/ecg_analyzer/utils/: __init__.py  constants.py  handlers.py  utils.py
src/models/: base_model.py  cnn_handcrafted.py  evaluation.py  resnet18.py  train.py  utils.py
src/training/: evaluator.py  trainer.py
src/utils/: handlers.py
